[tool.poetry]
name = "instadownloader"
version = "0.1.0"
description = ""
authors = ["mandicoder <mandicoder@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
yt-dlp = "^2025.3.31"
instaloader = "^4.14.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
